<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/service_form_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainForm" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

			
            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:padding="10dp"
	                android:layout_marginBottom="20dp"
	                android:text="@string/title_activity_main_form"
	                android:textSize="30sp" />

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date"
                android:paddingBottom="20dp"
                android:textSize="@dimen/login_field_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/service_type_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:text="@string/service_type_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/service_type_spinner"
                    android:layout_width="0dp"
                    android:textSize="25sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/contribution_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/contribution_hint"
                android:inputType="textMultiLine"
                android:paddingBottom="20dp"
                android:textSize="@dimen/login_field_size" />

            <EditText
                android:id="@+id/impact_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/impact_hint"
                android:inputType="textMultiLine"
                android:paddingBottom="20dp"
                android:textSize="@dimen/login_field_size" />

            <EditText
                android:id="@+id/hours_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/hours_hint"
                android:inputType="number"
                android:paddingBottom="20dp"
                android:textSize="@dimen/login_field_size" />

            <Button
                android:id="@+id/back_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_next"
                android:textSize="@dimen/login_field_size"
                android:onClick="nextPage" />

        </LinearLayout>

    </ScrollView>
